@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Sequel::MySQL.convert_invalid_date_time accessor for dealing with dates like "0000-00-00" and times like "25:00:00" (jeremyevans, epugh)
+
 * Eliminate internal dependence on core_sql extensions (jeremyevans)
 
 * Deprecate Migration and Migrator, require 'sequel/extensions/migration' if you want them (jeremyevans)
